--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "fastapi>=0.115.4",
+    "httpx>=0.27.2",
+    "uvicorn>=0.32.0",
+    "websockets>=14.0",
+]
