--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "fastapi>=0.115.4",
     "httpx>=0.27.2",
+    "pydantic[email]>=2.9.2",
     "uvicorn>=0.32.0",
     "websockets>=14.0",
 ]
