--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,10 @@ requires-python = ">=3.10"
 dependencies = [
     "fastapi>=0.115.4",
     "httpx>=0.27.2",
+    "passlib[bcrypt]>=1.7.4",
     "pydantic[email]>=2.9.2",
+    "pyjwt>=2.9.0",
+    "python-multipart>=0.0.17",
     "uvicorn>=0.32.0",
     "websockets>=14.0",
 ]
